--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,23 +29,17 @@ description = ""
 license = "Apache 2.0"
 readme = "README.md"
 repository = "https://github.com/webrecorder/crawlmanager"
-authors = ["John Berlin <john.berlin@rhizome.org>"]
+authors = ["John Berlin <john.berlin@rhizome.org>", "Ilya Kreymer <ikreymer@gmail.com"]
 
 [tool.poetry.dependencies]
 python = ">= 3.7"
-aiodns = ">=2.0.0"
-aiofiles = ">=0.4.0"
 aiohttp = ">= 3.5.4"
 aiohttp_jinja2 = ">= 1.1.0"
-aiojobs = ">= 0.2.2"
 aioredis = ">= 1.2.0"
-async-timeout = ">= 3.0.1"
-attrs = ">= 19.1.0"
-better_exceptions = ">= 0.2.2"
-cchardet = ">= 2.1.4"
 jinja2 = ">= 2.10"
 ujson = ">= 1.35"
 uvloop = ">= 0.12.2"
+fastapi = "^0.9.1"
 
 
 [tool.poetry.dev-dependencies]
@@ -56,3 +50,6 @@ mypy = ">= 0.670"
 pytest = ">= 4.3.1"
 pytest-asyncio = ">= 0.10.0"
 black = ">= 19.3b0"
+mock = "^2.0"
+requests = "^2.21"
+fakeredis = "^1.0"
