docker: setup dockerfile and compose add poetry-setup generated setup.py/requirements.txt for docker live crawl integration tests: add test_live_crawl live integration (using docker deployment), running crawl_tests.yaml tests to run can be specified in the yaml config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ jinja2 = ">= 2.10"
 ujson = ">= 1.35"
 uvloop = ">= 0.12.2"
 fastapi = "^0.9.1"
+uvicorn = "^0.6.1"
 
 
 [tool.poetry.dev-dependencies]
