add get /crawls api to return all crawls tests: ensure all created crawls cleaned up on teardown pool: use 'auto-pool' as pool, specify pool as query arg tests: switch first test to multiple tabs, single browser!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
         build: ./
         environment:
             - REDIS_URL=redis://redis/0
+            - DEFAULT_POOL=auto-pool
 
         depends_on:
             - redis
