--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: '3.5'
 services:
     crawlman:
         image: webrecorder/crawlman
-        build: ./
+        build:
+            context: .
         environment:
             - REDIS_URL=redis://redis/0
             - DEFAULT_POOL=auto-pool
@@ -13,7 +14,7 @@ services:
             - pywb
 
         ports:
-            - 8000:8000
+            - 8001:8000
 
         volumes:
             - ./:/app/
