--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
     "gatsby": "^2.2.11",
+    "gatsby-plugin-sass": "^2.0.11",
+    "node-sass": "^4.11.0",
     "prettier": "^1.16.4",
     "prop-types": "^15.7.2",
     "react-hot-loader": "^4.8.0",
