--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,15 +5,27 @@
   "license": "Appache-2.0",
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "react": "^16.8.4",
+    "immutable": "^4.0.0-rc.12",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
+    "react": "^16.8.5",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "npm:@hot-loader/react-dom",
-    "reactstrap": "^7.1.0"
+    "react-redux": "^6.0.1",
+    "reactstrap": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.5",
+    "redux-batched-actions": "^0.4.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-immutable": "^4.0.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
-    "gatsby": "^2.2.11",
+    "gatsby": "^2.3.0",
     "gatsby-plugin-sass": "^2.0.11",
     "node-sass": "^4.11.0",
     "prettier": "^1.16.4",
