ui can now create crawls and reacts to no crawls in redis etc changed models to reflect camelcase style now

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     pywb:
         image: webrecorder/pywb
 
-        command: wayback --live --proxy coll --proxy-record -a --auto-interval 10
+        command: wayback --live --proxy coll --proxy-record
 
         environment:
             - INIT_COLLECTION=coll
