--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "immutable": "^4.0.0-rc.12",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
-    "react": "^16.8.5",
+    "p-is-promise": "^2.0.0",
+    "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-bootstrap-sweetalert": "^4.4.1",
     "react-dom": "npm:@hot-loader/react-dom",
@@ -24,12 +25,18 @@
     "redux-form": "^8.1.0",
     "redux-immutable": "^4.0.0",
     "redux-promise": "^0.6.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "url-regex": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
+    "eslint": "^5.15.3",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "gatsby": "^2.3.3",
     "gatsby-plugin-sass": "^2.0.11",
     "node-sass": "^4.11.0",
