--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,20 +4,16 @@
   "main": "index.js",
   "license": "Appache-2.0",
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "eventemitter3": "^3.1.0",
+    "@hot-loader/react-dom": "16.8.6",
     "immutable": "^4.0.0-rc.12",
-    "mobx": "^5.9.0",
-    "mobx-react": "^5.4.3",
-    "p-is-promise": "^2.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.6",
-    "react-bootstrap-sweetalert": "^4.4.1",
-    "react-dom": "npm:@hot-loader/react-dom",
+    "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-toastify": "^5.0.0-rc.3",
     "react-virtualized": "^9.21.0",
-    "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
     "redux-batched-actions": "^0.4.1",
@@ -26,33 +22,43 @@
     "redux-immutable": "^4.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "uikit": "^3.0.3",
     "url-regex": "^4.1.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
+    "@types/react": "^16.8.10",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "babel-plugin-add-module-exports": "^1.0.0",
     "babel-preset-env": "^1.7.0",
+    "css-loader": "^2.1.1",
     "eslint": "^5.15.3",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "gatsby": "^2.3.3",
-    "gatsby-plugin-sass": "^2.0.11",
+    "fastify": "^2.1.0",
+    "fastify-static": "^2.4.0",
+    "fastify-webpack-hmr": "^2.0.1",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "prettier": "^1.16.4",
-    "prop-types": "^15.7.2",
     "react-hot-loader": "^4.8.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
+    "webpack-dev-middleware": "^3.6.1",
     "webpack-hot-middleware": "^2.24.3"
   },
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "deploy": "gatsby build && gh-pages -d public -b master"
-  },
-  "browserslist": [
-    "> 1.5%"
-  ]
+    "develop": "node ./webpack/development-server.js"
+  }
 }
