restored docker-compose yaml file and added some additional tweaks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
         depends_on:
             - redis
-#            - pywb
+            - pywb
 
         ports:
             - 8000:8000
@@ -19,57 +19,57 @@ services:
         volumes:
             - ./:/app/
 
-#    pywb:
-#        image: webrecorder/pywb
-#
-#        command: wayback --live --proxy coll --proxy-record
-#
-#        environment:
-#            - INIT_COLLECTION=coll
-#
-#        #volumes:
-#        #    - ./webarchive:/webarchive
-#
-#        networks:
-#            - browsers
-#
-#        ports:
-#            - 8180:8080
-#
-#    shepherd:
-#        image: oldwebtoday/browser-shepherd
-#
-#        environment:
-#            - REDIS_BROWSER_URL=redis://redis/0
-#            - IDLE_TIMEOUT=60
-#            - BROWSER_NET=crawlmanager_browsers
-#            - WEBRTC_HOST_IP=127.0.0.1
-#            - MAIN_NET=crawlmanager_default
-#
-#            - PROXY_HOST=pywb
-#            - PROXY_PORT=8080
-#
-#        depends_on:
-#            - redis
-#
-#        volumes:
-#            - /var/run/docker.sock:/var/run/docker.sock
-#            #- ./flocks:/app/flocks
-#
-#        ports:
-#            - 9020:9020
+    pywb:
+        image: webrecorder/pywb
+
+        command: wayback --live --proxy coll --proxy-record -a --auto-interval 10
+
+        environment:
+            - INIT_COLLECTION=coll
+
+        #volumes:
+        #    - ./webarchive:/webarchive
+
+        networks:
+            - browsers
+
+        ports:
+            - 8180:8080
+
+    shepherd:
+        image: oldwebtoday/browser-shepherd
+
+        environment:
+            - REDIS_BROWSER_URL=redis://redis/0
+            - IDLE_TIMEOUT=60
+            - BROWSER_NET=crawlmanager_browsers
+            - WEBRTC_HOST_IP=127.0.0.1
+            - MAIN_NET=crawlmanager_default
+
+            - PROXY_HOST=pywb
+            - PROXY_PORT=8080
+
+        depends_on:
+            - redis
+
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
+            #- ./flocks:/app/flocks
+
+        ports:
+            - 9020:9020
 
     redis:
         image: redis:3.2.4
 
-#    behaviors:
-#      image: webrecorder/behaviors
+    behaviors:
+      image: webrecorder/behaviors
 
 
 networks:
     default:
         driver: bridge
 
-#    browsers:
-#        driver: bridge
+    browsers:
+        driver: bridge
 
