--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ install:
   - pip install -r test-requirements.txt
 
 script:
-  - pip install pytest mock
   - py.test -vv ./tests/test_api.py
   - bash ./tests/bootstrap-compose.sh
-  - py.test --headless -vv ./tests/test_live_crawl.py
+  - py.test --headless --maxfail 1 -vv ./tests/test_live_crawl.py
+  - docker-compose logs
 
