--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ jobs:
         - DOCKER_COMPOSE_VERSION=1.23.2
 
       before_install:
+        - docker pull oldwebtoday/base-browser
         - docker pull oldwebtoday/chrome:67
         - docker pull webrecorder/autobrowser
         - sudo rm /usr/local/bin/docker-compose
