rollback some changes: readd mypy.ini, myproject.toml, readd reqs to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 aiodns
 aiofiles
 aiohttp
-better_exceptions
-fastapi
 aioredis
+better_exceptions
+cchardet
+fastapi
+pydantic
 pyyaml
+starlette
 ujson
 uvloop
 uvicorn
