--- a/tests/test-docker-compose.yml
+++ b/tests/test-docker-compose.yml
@@ -4,7 +4,11 @@ services:
     crawlman:
         image: webrecorder/crawlman
         build:
-            context: .
+            context: ../
+
+        # add debug logging
+        command: uvicorn --reload --host 0.0.0.0 --port 8000 crawlmanager.api:app --log-level debug
+
         environment:
             - REDIS_URL=redis://redis/0
             - DEFAULT_POOL=auto-pool
@@ -16,32 +20,30 @@ services:
         ports:
             - 8000:8000
 
-        volumes:
-            - ./:/app/
 
     pywb:
         image: webrecorder/pywb
 
-        command: wayback --live --proxy coll --proxy-record -a --auto-interval 10
+        # replay proxy mode!
+        command: wayback --proxy coll
 
-        environment:
-            - INIT_COLLECTION=coll
-
+        # local test dir
         volumes:
-            - ./webarchive:/webarchive
+            - ./test-webarchive:/webarchive
 
         networks:
             - browsers
 
+        # use 8181 port for test only
         ports:
-            - 8180:8080
+            - 8181:8080
 
     shepherd:
         image: oldwebtoday/shepherd:1.1.0-dev
 
         environment:
-            - BROWSER_NET=crawlmanager_browsers
-            - MAIN_NET=crawlmanager_default
+            - BROWSER_NET=tests_browsers
+            - MAIN_NET=tests_default
 
             - PROXY_HOST=pywb
             - PROXY_PORT=8080
@@ -51,10 +53,10 @@ services:
 
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
-            - ./flocks:/app/flocks
+            - ../flocks:/app/flocks
 
         ports:
-            - 9020:9020
+            - 9323:9020
 
     redis:
         image: redis:3.2.4
