--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
             - ./flocks:/app/flocks
+            - ./pool_config.yaml:/app/pool_config.yaml
 
         ports:
             - 9020:9020
