--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-table": "^6.9.2",
     "react-toastify": "^5.0.0-rc.3",
     "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
