support specifying collection and mode as part of the crawl #9 'coll' and 'mode' fields are available as part of the crawl definition add custom pywb which auto-creates collection of first use, reading collection and mode from redis tests: update tests for new pywb setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,21 +20,24 @@ services:
             - ./:/app/
 
     pywb:
-        image: webrecorder/pywb
-
-        command: wayback --live --proxy coll --proxy-record -a --auto-interval 10
+        build: ./pywb/
 
         environment:
             - INIT_COLLECTION=coll
+            - REDIS_URL=redis://redis/0
 
         volumes:
             - ./webarchive:/webarchive
 
         networks:
+            - default
             - browsers
 
         ports:
             - 8180:8080
+
+        depends_on:
+            - redis
 
     shepherd:
         image: oldwebtoday/shepherd:1.1.0-dev
