support for screenshots if 'screenshot_coll' is set (#11) pywb supports 'PUT /screenshot/<coll>' endpoint for putting screenshots additional properties for default crawl info: (#10) - num_queue (frontier), num_seen, num_pending, headless, screenshot_coll - don't allow --watch if headless mode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         environment:
             - REDIS_URL=redis://redis/0
             - DEFAULT_POOL=auto-pool
+            - SCREENSHOT_API_URL=http://pywb:8080/screenshot/{coll}
 
         depends_on:
             - redis
