support for browser profiles as per #14 update configs: - enable auto fetch for pywb - enable default fixed pool, no-proxy/live mode for creating profile browser - profile: list, create, remove - crawl create: can specify --profile flag, also --coll and --mode overrides - consistently use 'behavior_time' param for behavior time

--- a/flocks/browsers.yaml
+++ b/flocks/browsers.yaml
@@ -25,7 +25,8 @@ containers:
       DISPLAY: ':99'
       PULSE_SERVER: '/tmp/.X11-unix/pulse-socket'
 
-      PROXY_HOST: 'pywb'
+      #default to no proxy, set by crawler
+      #PROXY_HOST: 'pywb'
       PROXY_PORT: '8080'
       PROXY_CA_URL: 'http://wsgiprox/download/pem'
       PROXY_CA_FILE: '/tmp/proxy-ca.pem'
