--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
             - REDIS_URL=redis://redis/0
             - DEFAULT_POOL=auto-pool
             - SCREENSHOT_API_URL=http://pywb:8080/screenshot/{coll}
+            - PROXY_HOST=pywb
 
         depends_on:
             - redis
