--- a/pywb/config.yaml
+++ b/pywb/config.yaml
@@ -4,12 +4,14 @@ proxy:
   coll: coll
   recording: true
 
-  ca_name: pywb OWT CA
-  ca_file_cache: /app/proxy-certs/pywb-ca.pem
+  enable_banner: false
+  enable_wombat: true
 
 recorder: live
 
 autoindex: 30
+
+enable_auto_fetch: true
 
 collections:
   live: $live
