fix test docker compose add install-browsers.sh, use for travis install

--- a/tests/test-docker-compose.yml
+++ b/tests/test-docker-compose.yml
@@ -12,6 +12,8 @@ services:
         environment:
             - REDIS_URL=redis://redis/0
             - DEFAULT_POOL=auto-pool
+            - SCREENSHOT_API_URL=http://pywb:8080/screenshot/{coll}
+            - PROXY_HOST=pywb
 
         depends_on:
             - redis
