travis: set install-browsers to headless

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ jobs:
         - DOCKER_COMPOSE_VERSION=1.23.2
 
       before_install:
-        - bash -x ./install-browsers.sh
+        - ./install-browsers.sh --headless
         - sudo rm /usr/local/bin/docker-compose
         - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
         - chmod +x docker-compose
