API Refactor / Browser Profiles Support (#15)
* api refactor:
- '/crawls' create api accepts all options as POST body params, 'start' indicates if also starting
- '/crawl/<id>/start' api simply starts crawl
- 'cache' enum added to (always, default, never) to indicate aggressive cacheing (every request), default, or no cacheing
- browsertrix_cli: move crawl commands to 'crawls' subcommand and crawls.py to allow other subcommands
- tests: update tests for new api, fix name in test compose
- update /crawl/<id>/urls to return 'scopes' and 'queue' as with lists of dict instead of lists of dict as string.

* support for browser profiles as per #14
update configs:
- enable auto fetch for pywb
- add fixed-pool to pools
- enable default fixed pool, no-proxy/live mode for creating profile browser
- proxy set via PROXY_HOST env var, defaults to 'pywb'
- profile: list, create, remove
- crawl create: can specify --profile flag, also --coll and --mode overrides
- consistently use 'behavior_time' param for behavior time

* tests: update test-docker-compose
- add install-browsers.sh, use for travis install (with headless)
- remove unused decoding functions

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,7 @@ jobs:
         - DOCKER_COMPOSE_VERSION=1.23.2
 
       before_install:
-        - docker pull oldwebtoday/base-browser
-        - docker pull oldwebtoday/chrome:73
-        - docker pull webrecorder/autobrowser
+        - ./install-browsers.sh --headless
         - sudo rm /usr/local/bin/docker-compose
         - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
         - chmod +x docker-compose
