--- a/pywb/config.yaml
+++ b/pywb/config.yaml
@@ -4,9 +4,14 @@ proxy:
   coll: coll
   recording: true
 
+  enable_banner: false
+  enable_wombat: true
+
 recorder: live
 
 autoindex: 30
+
+enable_auto_fetch: true
 
 collections:
   live: $live
