--- a/tests/test-docker-compose.yml
+++ b/tests/test-docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.5'
 
 services:
-    crawlman:
-        image: webrecorder/crawlman
+    browsertrix:
+        image: webrecorder/browsertrix
         build:
             context: ../
 
@@ -12,6 +12,8 @@ services:
         environment:
             - REDIS_URL=redis://redis/0
             - DEFAULT_POOL=auto-pool
+            - SCREENSHOT_API_URL=http://pywb:8080/screenshot/{coll}
+            - PROXY_HOST=pywb
 
         depends_on:
             - redis
