renaming: behavior_time -> behavior_max_time sample_crawl_specs -> sample-crawls

--- a/sample-crawls/custom-scopes.yaml
+++ b/sample-crawls/custom-scopes.yaml
@@ -17,6 +17,6 @@ crawls:
     seed_urls:
       - https://rhizome.org/
 
-    behavior_time: 120
+    behavior_max_time: 120
     browser: chrome:73
 
