--- a/sample-crawls/social-media-replay.yaml
+++ b/sample-crawls/social-media-replay.yaml
@@ -5,13 +5,14 @@ crawls:
     num_tabs: 1
 
     coll: social-media
-    mode: record
+    mode: replay
+    screenshots_coll: screenshots-qa
 
     seed_urls:
       - https://twitter.com/webrecorder_io
       - https://instagram.com/rhizomedotorg
 
-    behavior_time: 300
+    behavior_max_time: 300
     browser: chrome:73
 
     cache: default
