initial pass on full-text search integration - docker: add solr using default schema with dynamic fields - enable dom extract + screenshot with new pywb apis - pywb: write dom snapshot to warc, extract text and upload to solr - pywb: add solr ETL for adding text, querying page list and search queries - pywb: add prototype search ui as default collection view, showing page list or search results, highlighted snippets and screenshot if available

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,8 @@
+pywb
+build
+webarchive
+browsertrix_cli
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Node template
 # Logs
@@ -223,6 +228,7 @@ venv.bak/
 
 # mkdocs documentation
 /site
+
 
 # mypy
 .mypy_cache/
