--- a/flocks/browsers.yaml
+++ b/flocks/browsers.yaml
@@ -18,6 +18,7 @@ containers:
 
   - name: browser
     image: oldwebtoday/base-browser
+    image_label: wr.name
     set_user_params: true
     external_network: '${BROWSER_NET}'
 
