ui work + pywb improvements: - rearrange crawl creation UI, move advanced options into separate dropdown, fix validation - add new fields to crawl list table to match cli options, use tabs in nav bar - add new Browsertrix logo to main crawl UI and pywb collection page - pywb: run from app directory, configure collections directory at /webarchive/collections - pywb: avoid auto-creating 'coll' directory every time, create /webarchive/collections on start up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,14 +19,13 @@ services:
         ports:
             - 8000:8000
 
-        volumes:
-            - ./:/app/
+        #volumes:
+        #    - ./:/app/
 
     pywb:
         build: ./pywb/
 
         environment:
-            - INIT_COLLECTION=coll
             - REDIS_URL=redis://redis/0
 
         volumes:
