--- a/flocks/browsers.yaml
+++ b/flocks/browsers.yaml
@@ -35,8 +35,8 @@ containers:
       PROXY_CA_FILE: '/tmp/proxy-ca.pem'
 
   - name: autobrowser
-    #image: webrecorder/autobrowser
-    image: webrecorder/simple-driver
+    image: webrecorder/autobrowser
+    #image: webrecorder/simple-driver
 
     external_network: '${MAIN_NET}'
 
